--- a/bash/build.gradle
+++ b/bash/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'application'
     id 'java'
 }
 
@@ -6,6 +7,13 @@ group 'org.example'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
+application {
+    mainClassName = 'bash.Run'
+}
+
+run {
+    standardInput = System.in
+}
 
 repositories {
     mavenCentral()
@@ -14,4 +22,5 @@ repositories {
 dependencies {
     implementation 'org.jetbrains:annotations:18.0.0'
     testImplementation group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
 }
